# napari-tracking-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  __main__.py  napari-tracking-analysis.pyproject  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md  config.yml
src/napari-tracking-analysis/: __init__.py  _plugin_widget.py  napari.yaml
src/napari-tracking-analysis/_tests/: test_widget.py
src/napari-tracking-analysis/base/: __init__.py  app_state.py  histogram_grid.py  plots.py  sliders.py  widget.py
src/napari-tracking-analysis/filter_widget/: __init__.py  properties_histogram.py  property_filter_widget.py
src/napari-tracking-analysis/segmentation_widget/: __init__.py  segmentation_widget.py
src/napari-tracking-analysis/step_analysis_widget/: __init__.py  step_analysis_widget.py
src/napari-tracking-analysis/tracking_widget/: __init__.py  track_models.py  tracking_widget.py
src/napari-tracking-analysis/tracks_reader/: __init__.py
src/napari-tracking-analysis/tracks_writer/: __init__.py
src/napari-tracking-analysis/ui/: base_widget.ui  filter_list_item_widget.ui  filter_widget.ui  h_range_slider.ui  histogram_bin_control_widget.ui  segmentation_widget.ui  step_analysis_result_widget.ui  step_analysis_widget.ui  tracking_widget.ui  walking_average.ui
src/napari-tracking-analysis/utils/: __init__.py
