[metadata]
name = napari-tracking-analysis
version = attr: napari_tracking_analysis.__version__
description = A plugin to detect steps in fluorescent image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zeroth/napari-tracking-analysis
author = Abhishek Patil
author_email = abhishek@zeroth.me
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/zeroth/napari-tracking-analysis/issues
    Documentation = https://github.com/zeroth/napari-tracking-analysis#README.md
    Source Code = https://github.com/zeroth/napari-tracking-analysis
    User Support = https://github.com/zeroth/napari-tracking-analysis/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    apoc
    matplotlib
    scikit-image
    trackpy
    pandas

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-tracking-analysis = napari_tracking_analysis:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    qtpy


[options.package_data]
* = *.yaml
